feat: 코드 경고 해결